fix renderbug: pagination widget was appearing on a line above 'sorted by' widget on /projects/searchresults, instead of right-aligned on the same line as in /people/searchresults and /sitesearch (why do we have three distinct classes oc-feed-sorter oc-directory-sorter and oc-lineup-sorter?)
git-svn-id: https://svn.socialplanning.org/svn/opencore/trunk@22018 40f73b84-6177-4a8e-8c61-7eee4b1974ed

--- a/opencore/browser/css/opencore.css
+++ b/opencore/browser/css/opencore.css
@@ -364,7 +364,8 @@ dl.oc-plainList dd {
   /* display: none; */
 }
 .oc-lineup .oc-paginator,
-.oc-directory-sorter .oc-paginator {
+.oc-directory-sorter .oc-paginator,
+.oc-feed-sorter .oc-paginator {
   float: right;
   clear: none;
   font-size: 10px;
